--- a/index.html
+++ b/index.html
@@ -14,14 +14,12 @@
     </div>
 
     <div id="mainContainer" style="display: none;">
-        <div id="gridContainer">
-            <div class="grid" id="grid"></div>
-        </div>
-        <div id="riddleContainer">
-            <p id="riddleText">What has keys but can't open locks?</p>
-            <input type="text" id="riddleAnswer">
-            <button onclick="checkAnswer()">Submit Answer</button>
-        </div>
+        <h2>Sofie’s Riddle</h2>
+        <p>After a day of sunbathing in the garden, Sofie needs to go to sleep. She walks through all the doors once and closes them behind her.</p>
+        <p>Which room is her bedroom?</p>
+        <img src="riddle.png" alt="Sofie Riddle" style="max-width: 100%; height: auto;">
+        <input type="text" id="riddleAnswer" placeholder="Enter room letter">
+        <button onclick="checkAnswer()">Submit Answer</button>
     </div>
 
     <script src="script.js"></script>
