--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2>Sofie’s Riddle</h2>
         <p>After a day of sunbathing in the garden, Sofie needs to go to sleep. She walks through all the doors once and closes them behind her.</p>
         <p>Which room is her bedroom?</p>
-        <img src="riddle.png" alt="Sofie Riddle" style="max-width: 100%; height: auto;">
+        <img src="riddle1.png" alt="Sofie Riddle" style="max-width: 100%; height: auto;">
         <input type="text" id="riddleAnswer" placeholder="Enter room letter">
         <button onclick="checkAnswer()">Submit Answer</button>
     </div>
