--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="passwordContainer">
+    <div id="passwordContainer", class="glow">
         <label for="password">Enter Password:</label>
         <input type="password" id="password">
         <button onclick="checkPassword()">Enter</button>
