--- a/PSW2.html
+++ b/PSW2.html
@@ -1,1 +1,8 @@
-page 2
+<html>
+    <head>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <div>page 2</div>
+    </body>
+</html>
