--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     </div>
 
     <div id="mainContainer" style="display: none;">
-        <h2>Sofie’s Riddle</h2>
-        <p>After a day of sunbathing in the garden, Sofie needs to go to sleep. She walks through all the doors once and closes them behind her.</p>
-        <p>Which room is her bedroom?</p>
+        <h2>Rätzel:</h2>
+        <p>Nach einem Tag in der Sonne im Garten muss Sofie schlafen gehen. Sie geht durch alle Türen einmal hindurch und schließt sie hinter sich.</p>
+        <p><strong>Welches Zimmer ist ihr Schlafzimmer?</strong></p>
         <img src="Riddle1.png" alt="Sofie Riddle" style="max-width: 100%; height: auto;">
         <input type="text" id="riddleAnswer" placeholder="Enter room letter">
         <button onclick="checkAnswer()">Submit Answer</button>
