--- a/PSW2.html
+++ b/PSW2.html
@@ -3,6 +3,9 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div>page 2</div>
+        <div class = "container">
+            <div><h1>404 Not Found</h1></div>
+            <div style="display:block">Try again elsewhere</div>
+        </div>
     </body>
 </html>
