Added Stage CP 4

--- a/PSW2.html
+++ b/PSW2.html
@@ -4,8 +4,11 @@
     </head>
     <body>
         <div class = "container">
-            <div><h1>404 Not Found</h1></div>
-            <div style="display:block">Try again elsewhere</div>
+            <div><h1>Great</h1></div>
+            <div>You found us.</div>
+            <div>Now you have to find something for us.</div>
+            <div>We need the person who is responible for the plot in <bold>TINGWD</bold></div>
+            <footer>(4 Letters)</footer>
         </div>
     </body>
 </html>
